# isle-portable-vita

./: CMakeLists.txt
CONFIG/vita/: CMakeLists.txt
CONFIG/vita/cxml/: config_plugin.xml  downloader_plugin.xml
CONFIG/vita/cxml/locale/: en_downloader.xml
CONFIG/vita/downloader/: App.cpp  App.hpp  DeleteFilesJob.cpp  DeleteFilesJob.hpp  Dialog.cpp  Dialog.hpp  DownloadJob.cpp  DownloadJob.hpp  DownloadPage.cpp  DownloadPage.hpp  GameFiles.cpp  GameFiles.hpp  Page.cpp  Page.hpp  StartupPage.cpp  StartupPage.hpp  VerifyJob.cpp  VerifyJob.hpp  VerifyPage.cpp  VerifyPage.hpp  config.h  main.cpp  paf_loader.cpp  paf_main.cpp  paf_runtime.cpp  sha256.c  sha256.h  util.cpp  util.hpp
ISLE/: isleapp.cpp
packaging/vita/sce_sys/livearea/contents/: template.xml
